# Remmina

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .triage-policies.yml  AUTHORS  CHANGELOG.archive.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  COPYING  ChangeLog  Contact.html  Download.html  Doxyfile  FAQ.html  Features.html  LICENSE  LICENSE.OpenSSL  Objects  README  README.md  Screenshots.html  THANKS  THANKS.md  TRANSLATION  ToDo  Ubuntu-Packaging.md  buildflags.h.in  cmake_uninstall.cmake.in  config.h.in  default.nix  index.html  params.json  remmina-uncrustify.cfg  remmina.doap  snapcraft.yaml.in  translationstats
data/desktop/: CMakeLists.txt  appdata.xml  gnome-session-remmina  gnome-session-remmina.1  org.remmina.Remmina-file.desktop.in  org.remmina.Remmina-mime.xml  org.remmina.Remmina.appdata.xml  org.remmina.Remmina.desktop.in  remmina-file-wrapper.1  remmina-file-wrapper.in  remmina-file-wrapper.sh.in  remmina-file.desktop.in  remmina-gnome  remmina-gnome-xsession.desktop  remmina-gnome.1  remmina-gnome.desktop  remmina-gnome.session  remmina-mime.xml  remmina.desktop.in
data/icons/: CMakeLists.txt
data/ui/: CMakeLists.txt  remmina_about.glade  remmina_bug_report.glade  remmina_info.glade  remmina_key_chooser.glade  remmina_main.glade  remmina_master_password.glade  remmina_mpc.glade  remmina_news.glade  remmina_passwd.glade  remmina_pref.glade  remmina_preferences.glade  remmina_search.glade  remmina_search_popover.glade  remmina_snap_info_dialog.glade  remmina_spinner.glade  remmina_string_list.glade  remmina_unlock.glade  remmina_xinput_env_dialog.glade
plugins/: CMakeLists.txt  README.md
plugins/common/: remmina_plugin.h  remmina_plugin_python.h
plugins/exec/: CMakeLists.txt  exec_plugin.c  exec_plugin_config.h
plugins/gvnc/: CMakeLists.txt  gvnc_plugin.c  gvnc_plugin.h  gvnc_plugin_config.h
plugins/kwallet/: CMakeLists.txt
plugins/nx/: CMakeLists.txt  nx_plugin.c  nx_plugin.h  nx_session.c  nx_session.h  nx_session_manager.c  nx_session_manager.h
plugins/python_wrapper/: CMakeLists.txt  pygobject.h  python_wrapper_common.c  python_wrapper_common.h  python_wrapper_entry.c  python_wrapper_entry.h  python_wrapper_file.c  python_wrapper_file.h  python_wrapper_plugin.c  python_wrapper_plugin.h  python_wrapper_pref.c  python_wrapper_pref.h  python_wrapper_protocol.c  python_wrapper_protocol.h  python_wrapper_protocol_widget.c  python_wrapper_protocol_widget.h  python_wrapper_remmina.c  python_wrapper_remmina.h  python_wrapper_remmina_file.c  python_wrapper_remmina_file.h  python_wrapper_secret.c  python_wrapper_secret.h  python_wrapper_tool.c  python_wrapper_tool.h
plugins/pyvnc/: pyvnc.py
plugins/rdp/: CMakeLists.txt  rdp_channels.c  rdp_channels.h  rdp_cliprdr.c  rdp_cliprdr.h  rdp_event.c  rdp_event.h  rdp_file.c  rdp_file.h  rdp_graphics.c  rdp_graphics.h  rdp_monitor.c  rdp_monitor.h  rdp_plugin.c  rdp_plugin.h  rdp_settings.c  rdp_settings.h
plugins/secret/: CMakeLists.txt
plugins/spice/: CMakeLists.txt  spice_file.c  spice_file.h  spice_plugin.c  spice_plugin.h  spice_plugin_file_transfer.c  spice_plugin_usb.c
plugins/st/: CMakeLists.txt  st_plugin.c  st_plugin_config.h
plugins/telepathy/: CMakeLists.txt  Remmina.client  telepathy_channel_handler.c  telepathy_channel_handler.h  telepathy_handler.c  telepathy_handler.h  telepathy_plugin.c
plugins/tool_hello_world/: CMakeLists.txt  plugin.c  plugin_config.h
plugins/tool_hello_world_python/: toolsdevler.py
plugins/vnc/: CMakeLists.txt  vnc_plugin.c  vnc_plugin.h
plugins/www/: CMakeLists.txt  www_config.h  www_plugin.c  www_plugin.h  www_utils.c  www_utils.h
plugins/x2go/: CMakeLists.txt  x2go_plugin.c  x2go_plugin.h
plugins/xdmcp/: CMakeLists.txt  xdmcp_plugin.c
remmina/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.LibVNCServer  autogen.sh  configure.ac
remmina-gnome/src/: Makefile.am  Remmina_Applet.server.in.in  remminaapplet.c  remminaappletmenuitem.c  remminaappletmenuitem.h  remminaappletutil.c  remminaappletutil.h  remminaavahi.c  remminaavahi.h
remmina-plugins/: CMakeLists.txt  Makefile.am  README.LibVNCServer  acinclude.m4  configure.ac
remmina-plugins-gnome/: CMakeLists.txt  Makefile.am  README  autogen.sh  configure.ac
remmina-plugins-gnome/src/: Makefile.am  gkeyring_plugin.c  glibsecret_plugin.c  glibsecret_plugin.h  remminaplugingkeyring.c
remmina-plugins/common/: Makefile.am  remmina_plugin.h  remminaplugincommon.h
remmina-plugins/exec/: CMakeLists.txt  exec_plugin.c  exec_plugin_config.h
remmina-plugins/libvncserver/: CMakeLists.txt  Makefile.am  libvncclient.pc.in
remmina-plugins/nx/: CMakeLists.txt  Makefile.am  nx_plugin.c  nx_plugin.h  nx_session.c  nx_session.h  nx_session_manager.c  nx_session_manager.h  remminanxsession.c  remminanxsession.h  remminanxsessionmanager.c  remminanxsessionmanager.h  remminapluginnx.c  remminapluginnx.h
remmina-plugins/po/: CMakeLists.txt  POTFILES.in  POTFILES.skip  bg.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  hu.po  id.po  it.po  kk.po  lt.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
remmina-plugins/rdp/: CMakeLists.txt  (+31 more)
remmina-xfce/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
src/: CMakeLists.txt  pygobject.h  rcw.c  rcw.h  remmina.1  remmina.c  remmina.h  remmina.scd  remmina_about.c  remmina_about.h  remmina_applet_menu.c  remmina_applet_menu.h  remmina_applet_menu_item.c  remmina_applet_menu_item.h  remmina_avahi.c  remmina_avahi.h  remmina_bug_report.c  remmina_bug_report.h  remmina_chat_window.c  remmina_chat_window.h  remmina_connection_window.c  remmina_connection_window.h  remmina_crypt.c  remmina_crypt.h  remmina_curl_connector.c  remmina_curl_connector.h  remmina_exec.c  remmina_exec.h  remmina_ext_exec.c  remmina_ext_exec.h  remmina_external_tools.c  remmina_external_tools.h  remmina_file.c  remmina_file.h  remmina_file_editor.c  remmina_file_editor.h  remmina_file_manager.c  remmina_file_manager.h  remmina_ftp_client.c  remmina_ftp_client.h  (+93 more)
(+639 files in other folders)
